# CCT-MARL

./: README.md
CCT-MARL-peerj/: CITATION.cff  LICENSE  README.md  artifact_manifest.txt  environment.yml  pyproject.toml  reproduce_peerj_results.md  requirements.txt  run_ablation.sh  run_main_comparison.sh  run_reward_sensitivity.sh  run_scalability.sh  run_smoke_test.sh
CCT-MARL-peerj/configs/: ablation.yaml  cct_marl_5x5.yaml  iql_5x5.yaml  mappo_5x5.yaml  reward_sensitivity.yaml  scalability_10x10.yaml  scalability_8x8.yaml  shielded_baselines.yaml  vdn_5x5.yaml
CCT-MARL-peerj/docs/: INTEGRATION_NOTES.md  algorithm_notes.md  data_dictionary.md  metric_definitions.md  peerj_submission_notes.md
CCT-MARL-peerj/manuscript/: CCT_MARL_PeerJ_ComputerScience_Final.tex  README.md  wlpeerj.cls
CCT-MARL-peerj/results/: README.md
CCT-MARL-peerj/results/tables/: table2_main_comparison.csv  table3_shielded_baselines.csv  table4_component_ablation.csv  table5_scalability.csv  table6_reward_sensitivity.csv
CCT-MARL-peerj/scripts/: collect_results.py  evaluate.py  make_figures.py  make_tables.py  train.py
CCT-MARL-peerj/src/cct_marl/: __init__.py
CCT-MARL-peerj/src/cct_marl/agents/: cct_marl_agent.py  iql_agent.py  mappo_agent.py  vdn_agent.py
CCT-MARL-peerj/src/cct_marl/baselines/: greedy.py  greedy_reservation.py
CCT-MARL-peerj/src/cct_marl/communication/: mean_broadcast.py
CCT-MARL-peerj/src/cct_marl/envs/: construction_env.py
CCT-MARL-peerj/tests/: test_environment.py  test_reservation_shield.py  test_smoke_training.py
CCT-MARL-research-package/: LICENSE  (+2 more)
(+22 files in other folders)
